<resources>
    <string name="AI_Cutout">AI Cutout</string>
    <string name="Access_All_Features">Access All Features</string>
    <string name="Access_All_Features_tips">Rate us 5 stars to have 7-day FREE access to all features.</string>
    <string name="Adapt_to_all">Apply to all</string>
    <string name="Add">Add</string>
    <string name="Add_A_Layers">Add A Layers</string>
    <string name="Adjust">Adjust</string>
    <string name="Adjust_and_Effects">Adjust and Effects</string>
    <string name="Adjust_button_moved_here">Adjust button has been moved to here.</string>
    <string name="Advanced_Features">Advanced Features</string>
    <string name="Advanced_Features_tips">This project contains Advanced features that are exclusive for PRO Users only.</string>
    <string name="Advanced_Tutorials">Advanced Tutorials</string>
    <string name="Aging">Aging</string>
    <string name="Aging_Booth">"AGING
BOOTH"</string>
    <string name="Aging_Booth_Single_Line">AGING BOOTH</string>
    <string name="Aging_Filter">Aging Filter</string>
    <string name="Album">Albums</string>
    <string name="All">All</string>
    <string name="All_features_free_tips">All advanced features are free to use! Reminder: you may lose the free offer if you uninstall Image master. Hope you enjoy our app!</string>
    <string name="Allow_Access">Allow Storage Access</string>
    <string name="Allow_notification_get_featured">Allow notification and get latest featured templates, stickers and other updates.</string>
    <string name="Alter">Alter</string>
    <string name="Ambiance">Ambiance</string>
    <string name="Angle">Angle</string>
    <string name="Anticlockwise">Anticlockwise</string>
    <string name="Apply">Apply</string>
    <string name="Apply_to_my_image">Apply to my image</string>
    <string name="Applying">Applying...</string>
    <string name="Applying_Art_Filter">Applying Art Filter....</string>
    <string name="Art">Art</string>
    <string name="Art_Abstract">Abstract</string>
    <string name="Art_Outline">Outline</string>
    <string name="Artistic_Filter">"ARTISTIC
FILTER"</string>
    <string name="Artistic_Filter1">Art Filters</string>
    <string name="Artistic_Filter_Single_Line">ARTISTIC FILTER</string>
    <string name="Artistic_Filters">Artistic Filters</string>
    <string name="Ascend">Ascend</string>
    <string name="Asset_Store">"ASSET
STORE"</string>
    <string name="Auto">Auto</string>
    <string name="Auto_Cutout">"AUTO
CUTOUT"</string>
    <string name="Auto_Cutout1">Cutout</string>
    <string name="Auto_Eraser">"AUTO
ERASER"</string>
    <string name="Auto_Eraser1">Eraser</string>
    <string name="Auto_processing">Auto processing...</string>
    <string name="Automatically_renew_cancel_anytime">Automatically renew, cancel at anytime</string>
    <string name="Back">Back</string>
    <string name="Back_to_Homepage">Back to Homepage</string>
    <string name="Background">Background</string>
    <string name="Background_Remover">Background Remover</string>
    <string name="Basic">Basic</string>
    <string name="Basic_Tutorials">Basic Tutorials</string>
    <string name="Biggest_Discount">Biggest Discount</string>
    <string name="Biggest_Sale_Final_Hours">Biggest Sale Final Hours</string>
    <string name="Black">Black</string>
    <string name="Blend">Blend</string>
    <string name="Blur">Blur</string>
    <string name="Blur_Fade">Fade</string>
    <string name="Blur_Smooth">Transition</string>
    <string name="Brightness">Brightness</string>
    <string name="Brush">Brush</string>
    <string name="Brushes">Brushes</string>
    <string name="CANCEL">CANCEL</string>
    <string name="CLAIM_GIFT">CLAIM GIFT</string>
    <string name="CRAZY_TUTORIALS">"INSPIRING
TUTORIALS"</string>
    <string name="Camera">Camera</string>
    <string name="Cannot_find_font_files">"Can't find font files?"</string>
    <string name="Cannot_find_your_image">"Can't find the image?"</string>
    <string name="Cannot_find_your_image_hint_1">Hello, due to the privacy protection requirements of Google Play, we have modified the way of reading and writing files since %s and the new version no longer has access to certain directories.</string>
    <string name="Cannot_find_your_image_hint_2">"If you can't find some pictures when you try to import them from photo albums, you can open your Android's system file manager, find the picture file you want to import, copy and paste it to \"Camera\" or \"DCIM\" folder, then restart the app to reimport."</string>
    <string name="Cant_find_the_font_you_want">"Can't find the font you want?"</string>
    <string name="Cant_find_the_picture_you_want">"Can't find the picture you want?"</string>
    <string name="Cant_find_the_project_you_want">"Can't find the project you want?"</string>
    <string name="Canvas">Canvas</string>
    <string name="Canvas_Size">Canvas Size</string>
    <string name="Change_Layer">Change Layer</string>
    <string name="Change_colorful_photo">Choose a colorful photo to get magic effect</string>
    <string name="Character">Character</string>
    <string name="Cheek">Cheek</string>
    <string name="Chin">Chin</string>
    <string name="Choose">Choose</string>
    <string name="Choose_at_least_num">Choose at least one</string>
    <string name="Choose_what_interested_in">Choose what you are interested in</string>
    <string name="Christmas">Christmas</string>
    <string name="Christmas_Surprise">"Christmas
Surprise"</string>
    <string name="Clarity">Clarity</string>
    <string name="Clean_Picskit">2. Clean the Image master background process, restart our app.</string>
    <string name="Clean_the_painted">Clean the painted area to reshape</string>
    <string name="Click_change_mode">Click to change mode.</string>
    <string name="Click_here_reorder_folds">Click here to reorder folds.</string>
    <string name="Click_here_to_manage_your_stickers">Click here to manage your stickers</string>
    <string name="Clockwise">Clockwise</string>
    <string name="Clone">Clone</string>
    <string name="Clone_Stamp">Clone Stamp</string>
    <string name="Close">Close</string>
    <string name="Color">Color</string>
    <string name="Color_Splash">Color Splash</string>
    <string name="Confirm">Confirm</string>
    <string name="Congrats">Congrats</string>
    <string name="Congratulations">Congratulations!</string>
    <string name="Continue">Continue</string>
    <string name="Contrast">Contrast</string>
    <string name="Control_Adjust">"CONTROL &amp;
ADJUST"</string>
    <string name="Control_Adjust1">Adjust</string>
    <string name="Copy">Copy</string>
    <string name="Copyright">Guangzhou Guangzhuiyuan Copyright</string>
    <string name="Count_Layers_Selected">%d Layer(s) Selected</string>
    <string name="Crazy_Tutorials">Inspiring Tutorials</string>
    <string name="Create_First_Project">Create your First Project!</string>
    <string name="Create_My_Work">Create My Work</string>
    <string name="Crop">Crop</string>
    <string name="Current_Output_Format">Current Output Format</string>
    <string name="Curve">Curve</string>
    <string name="Custom">Custom</string>
    <string name="Custom_Size">Custom Size</string>
    <string name="Custom_sticker">Custom</string>
    <string name="Customize_modify_any_time">Customize your own Image master，modify at any time</string>
    <string name="Cutout">Cutout</string>
    <string name="Cutout_move_to_eraser">Cutout (Scissors) has been moved into Eraser.</string>
    <string name="Cutout_outline_too_short">Cutout outline is too short</string>
    <string name="DAYS">DAYS</string>
    <string name="DONE">DONE</string>
    <string name="DOUBLE_EXPOSURE">"DOUBLE
EXPOSURE"</string>
    <string name="DOUBLE_EXPOSURE1">Blend</string>
    <string name="Date_modified">Date modified</string>
    <string name="Default">Default</string>
    <string name="Delete">Delete</string>
    <string name="Delete_A_Layers">Delete A Layers</string>
    <string name="Density">Density</string>
    <string name="Descend">Descend</string>
    <string name="Direction">Direction</string>
    <string name="Dispersion">Dispersion</string>
    <string name="Do_you_want_to_give_up">Do you want to give up all the eraser modifications?</string>
    <string name="Do_you_want_to_give_up_text">Do you want to give up all the text modifications?</string>
    <string name="Doodle">Doodle</string>
    <string name="Doodle_Art">Doodle Art</string>
    <string name="Double_Exposure">Exposure</string>
    <string name="Double_exposure_single_line">Double Exposure</string>
    <string name="Double_tap_change_photos">Double tap to change photos.</string>
    <string name="Download">Download</string>
    <string name="Downloading">Downloading</string>
    <string name="Drag_here_to_adjust_the_shadow_size">"Drag here to adjust the shadow's size."</string>
    <string name="Drag_here_to_adjust_the_stroke_width">"Drag here to adjust the stroke's width"</string>
    <string name="Drag_layer_up_blending">Drag this image layer up for blending.</string>
    <string name="Drag_the_area_to_slim">Drag the area to slim</string>
    <string name="Drag_the_marker_to_the_area_that_you_want_to_clone">Drag the marker to the area that you want to clone.</string>
    <string name="Drag_the_marker_to_the_area_wrap">"Drag the marker to the area
that you want to clone."</string>
    <string name="Dripping_Effect">Dripping Effect</string>
    <string name="Duplicate">Duplicate</string>
    <string name="Edge_Detection">Edge Detection</string>
    <string name="Edit">Edit</string>
    <string name="Edition_compat_android_q">V2.4.0</string>
    <string name="Exit_Tutorials">Leave the tutorial</string>
    <string name="Facebook">Facebook</string>
    <string name="Filters">Filters</string>
    <string name="Get_Lifetime_VIP_FREE">Get Lifetime VIP for FREE</string>
    <string name="Get_Lifetime_VIP_FREE_share">Share this app to all your friends!</string>
    <string name="Hide">Hide</string>
    <string name="How_to_enable_access">How to enable access?</string>
    <string name="How_to_enable_access_step_1">1. Click Settings</string>
    <string name="How_to_enable_access_step_2">2. Click Permission</string>
    <string name="How_to_enable_access_step_3">3. Allow Storage</string>
    <string name="Join_PicsKit_Pro">Join Image master Pro</string>
    <string name="Leave_Here_to_Explorer">Stay to explore more</string>
    <string name="Let_Us_Go">"Let's Go"</string>
    <string name="Lock">Lock</string>
    <string name="Merge">Merge</string>
    <string name="No_thanks">No, thanks</string>
    <string name="Others">Others</string>
    <string name="Pinterest">Pinterest</string>
    <string name="Replace">Replace</string>
    <string name="Settings">Settings</string>
    <string name="Share_to_Instagram">Share to Instagram</string>
    <string name="Shop">Shop</string>
    <string name="Stickers">Stickers</string>
    <string name="Unlock_All_Features">Unlock All Features</string>
    <string name="Whatsapp">Whatsapp</string>
    <string name="camera">Camera</string>
    <string name="finish_tutorial">Congratulations</string>
    <string name="finish_tutorial_tips">Tutorial accomplished! That looks pretty cool. Learn more and keep going!</string>
    <string name="home_due_to_android_latest_policy">"\#Due to Android's %s, all the history projects may be removed if you uninstall the app (but the original media files won't be deleted)."</string>
    <string name="next_tutorial_name">Next tutorial: %s</string>
    <string name="no_permission_hint_2">"Image master needs access to your device's storage. Please enable access in Settings"</string>
    <string name="percent_off">"40%
OFF"</string>
    <string name="photos">Photos</string>
    <string name="restart">Restart</string>
    <string name="use_self_pic">Try with my own photos</string>
</resources>