<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@id/tabMain" android:background="@drawable/shape_white" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginRight="25.0dip" android:layout_centerInParent="true">
        <TextView android:textSize="15.0sp" android:textColor="#ff000000" android:gravity="center" android:id="@id/tv1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/no_permission_hint_2" android:lineSpacingExtra="5.0dip" />
        <TextView android:textSize="15.0sp" android:textStyle="bold" android:textColor="#ff000000" android:gravity="center" android:id="@id/tv2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/How_to_enable_access" android:lineSpacingExtra="5.0dip" />
        <TextView android:textSize="15.0sp" android:textColor="#ff000000" android:gravity="center" android:id="@id/tvStep1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/How_to_enable_access_step_1" android:lineSpacingExtra="5.0dip" />
        <TextView android:textSize="15.0sp" android:textColor="#ff000000" android:gravity="center" android:id="@id/tvStep2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/How_to_enable_access_step_2" android:lineSpacingExtra="5.0dip" />
        <TextView android:textSize="15.0sp" android:textColor="#ff000000" android:gravity="center" android:id="@id/tvStep3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/How_to_enable_access_step_3" android:lineSpacingExtra="5.0dip" />
        <TextView android:textColor="#ffffffff" android:gravity="center" android:id="@id/tvOk" android:background="@drawable/store_btn_bg_3" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="25.0dip" android:text="@string/Settings" />
    </LinearLayout>
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-18.0dip" android:src="@drawable/image_pop_oops" android:layout_alignTop="@id/tabMain" android:layout_centerHorizontal="true" />
    <ImageView android:id="@id/ivClose" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/nav_close_white_pre" android:layout_alignTop="@id/tabMain" android:layout_alignEnd="@id/tabMain" />
</RelativeLayout>