<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/rootView" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/topBar" android:layout_width="fill_parent" android:layout_height="45.0dip">
        <ImageView android:id="@id/ivBack" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/selector_nav_back" android:layout_centerVertical="true" />
        <lightcone.com.pack.view.AppUITextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/tvTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Shop" android:layout_centerInParent="true" />
    </RelativeLayout>
    <LinearLayout android:gravity="center_vertical" android:id="@id/tabBar" android:background="#fff0f0f0" android:layout_width="fill_parent" android:layout_height="35.0dip" android:layout_below="@id/topBar">
        <lightcone.com.pack.view.AppUIBoldTextView android:textSize="13.0sp" android:textColor="@drawable/selector_shop_tab_text_color" android:gravity="center" android:id="@id/tvStickers" android:background="@drawable/btn_text_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/Stickers" android:layout_weight="1.0" />
        <lightcone.com.pack.view.AppUIBoldTextView android:textSize="13.0sp" android:textColor="@drawable/selector_shop_tab_text_color" android:gravity="center" android:id="@id/tvFilters" android:background="@drawable/btn_text_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/Filters" android:layout_weight="1.0" />
        <lightcone.com.pack.view.AppUIBoldTextView android:textSize="13.0sp" android:textColor="@drawable/selector_shop_tab_text_color" android:gravity="center" android:id="@id/tvOthers" android:background="@drawable/btn_text_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/Others" android:layout_weight="1.0" />
    </LinearLayout>
    <lightcone.com.pack.view.NoScrollViewPager android:id="@id/pageFragment" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/tabBar" />
    <TextView android:textSize="18.0dip" android:textColor="#ffffffff" android:gravity="center" android:id="@id/tvJoinPro" android:background="@drawable/bottom_btn_bg" android:layout_width="320.0dip" android:layout_height="48.0dip" android:layout_marginBottom="30.0dip" android:text="@string/Join_PicsKit_Pro" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <RelativeLayout android:id="@id/tabJoinProEvent" android:layout_width="wrap_content" android:layout_height="60.0dip" android:layout_marginBottom="30.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <TextView android:textSize="22.0dip" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:id="@id/tvJoinProEvent" android:background="@drawable/ic_launcher_background" android:layout_width="320.0dip" android:layout_height="48.0dip" android:text="@string/Unlock_All_Features" android:layout_alignParentBottom="true" />
        <TextView android:textSize="12.0dip" android:textStyle="bold" android:textColor="#fffffc00" android:gravity="center" android:id="@id/tvJoinProEventOff" android:background="@drawable/ic_launcher_background" android:paddingTop="5.0dip" android:layout_width="50.0dip" android:layout_height="60.0dip" android:text="@string/percent_off" android:layout_alignBottom="@id/tvJoinProEvent" android:layout_alignEnd="@id/tvJoinProEvent" />
    </RelativeLayout>
</RelativeLayout>