<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/rootView" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/tabOptions" android:background="@drawable/shape_black_corners" android:padding="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="120.0dip" android:minWidth="130.0dip" android:layout_marginEnd="80.0dip" android:layout_alignParentEnd="true">
        <TextView android:textSize="13.0dip" android:textColor="#ffffffff" android:gravity="center_vertical" android:id="@id/btnDuplicate" android:background="@drawable/selector_show_layers_option_bg" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/Duplicate" android:drawablePadding="10.0dip" android:drawableStart="@drawable/leftbar_layer_con_duplicate" />
        <TextView android:textSize="13.0dip" android:textColor="#ffffffff" android:gravity="center_vertical" android:id="@id/btnReplace" android:background="@drawable/selector_show_layers_option_bg" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/Replace" android:drawablePadding="10.0dip" android:drawableStart="@drawable/leftbar_layer_con_replace" />
        <TextView android:textSize="13.0dip" android:textColor="#ffffffff" android:gravity="center_vertical" android:id="@id/btnEdit" android:background="@drawable/selector_show_layers_option_bg" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/Edit" android:drawablePadding="10.0dip" android:drawableStart="@drawable/leftbar_layer_con_edit" />
        <TextView android:textSize="13.0dip" android:textColor="#ffffffff" android:gravity="center_vertical" android:id="@id/btnMerge" android:background="@drawable/selector_show_layers_option_bg" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/Merge" android:drawablePadding="10.0dip" android:drawableStart="@drawable/leftbar_layer_con_merge" />
        <TextView android:textSize="13.0dip" android:textColor="#ffffffff" android:gravity="center_vertical" android:id="@id/btnDelete" android:background="@drawable/selector_show_layers_option_bg" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/Delete" android:drawablePadding="10.0dip" android:drawableStart="@drawable/leftbar_layer_con_delete" />
        <TextView android:textSize="13.0dip" android:textColor="#ffffffff" android:gravity="center_vertical" android:id="@id/btnLock" android:background="@drawable/selector_show_layers_option_bg" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/Lock" android:drawablePadding="10.0dip" android:drawableStart="@drawable/selector_leftbar_layer_lock" />
        <TextView android:textSize="13.0dip" android:textColor="#ffffffff" android:gravity="center_vertical" android:id="@id/btnHide" android:background="@drawable/selector_show_layers_option_bg" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/Hide" android:drawablePadding="10.0dip" android:drawableStart="@drawable/selector_leftbar_layer_hide" />
    </LinearLayout>
    <ImageView android:layout_width="8.0dip" android:layout_height="6.0dip" android:layout_marginTop="20.0dip" android:src="@drawable/shape_black_triangle" android:scaleType="centerCrop" android:layout_alignTop="@id/tabOptions" android:rotation="-135.0" android:layout_marginEnd="-3.0dip" android:layout_alignEnd="@id/tabOptions" />
</RelativeLayout>