<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/black_translucent" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/tabContent" android:background="@drawable/shape_white" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <TextView android:textSize="22.0sp" android:textStyle="bold" android:textColor="#ff000000" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/tvTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="36.0dip" android:layout_marginBottom="10.0dip" android:text="@string/Get_Lifetime_VIP_FREE" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" />
        <TextView android:textSize="17.0sp" android:textColor="#ff333333" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/tvTips" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/Get_Lifetime_VIP_FREE_share" />
        <lightcone.com.pack.view.DrawableTextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center_vertical" android:id="@id/btnOk" android:background="@drawable/shape_pop_btn_blue" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="10.0dip" android:text="@string/Share_to_Instagram" android:drawablePadding="10.0dip" android:drawableStart="@drawable/share_icon_inshdpi" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/tabShareList" android:background="#fff4f4f4" android:layout_width="fill_parent" android:layout_height="75.0dip" android:layout_marginTop="20.0dip">
            <TextView android:textSize="13.0sp" android:textColor="#ff999999" android:gravity="center" android:id="@id/tvShareWhatsapp" android:paddingTop="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/Whatsapp" android:lines="2" android:drawableTop="@drawable/finish_icon_whatsapphdpi" android:drawablePadding="2.0dip" android:layout_weight="1.0" />
            <TextView android:textSize="13.0sp" android:textColor="#ff999999" android:gravity="center" android:id="@id/tvShareFacebook" android:paddingTop="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/Facebook" android:lines="2" android:drawableTop="@drawable/finish_icon_facebookhdpi" android:drawablePadding="2.0dip" android:layout_weight="1.0" />
            <TextView android:textSize="13.0sp" android:textColor="#ff999999" android:gravity="center" android:id="@id/tvSharePinterest" android:paddingTop="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/Pinterest" android:lines="2" android:drawableTop="@drawable/finish_icon_pinteresthdpi" android:drawablePadding="2.0dip" android:layout_weight="1.0" />
            <TextView android:textSize="13.0sp" android:textColor="#ff999999" android:gravity="center" android:id="@id/tvShareOther" android:paddingTop="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/Others" android:lines="2" android:drawableTop="@drawable/finish_icon_otherhdpi" android:drawablePadding="2.0dip" android:layout_weight="1.0" />
        </LinearLayout>
        <TextView android:textSize="15.0sp" android:textColor="#ff999999" android:gravity="center" android:id="@id/btnCancel" android:background="@drawable/shape_text_underline_gray" android:layout_width="wrap_content" android:layout_height="30.0dip" android:layout_marginTop="15.0dip" android:text="@string/No_thanks" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" />
        <View android:layout_width="wrap_content" android:layout_height="15.0dip" />
    </LinearLayout>
    <com.airbnb.lottie.LottieAnimationView android:id="@id/animation_view" android:layout_width="55.0dip" android:layout_height="55.0dip" android:layout_marginTop="-27.5dip" android:layout_alignTop="@id/tabContent" android:layout_centerHorizontal="true" app:lottie_autoPlay="true" app:lottie_fileName="lotties/emoji_enter.json" app:lottie_loop="false" />
</RelativeLayout>