<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:background="@drawable/shape_white" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignTop="@id/tabContent" android:layout_alignBottom="@id/tabContent" android:layout_alignStart="@id/tabContent" android:layout_alignEnd="@id/tabContent" />
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@id/tabContent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true" android:layout_marginStart="30.0dip" android:layout_marginEnd="30.0dip">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="44.0dip">
            <TextView android:textSize="15.0dip" android:textColor="#ff666666" android:gravity="center" android:id="@id/btnExitHome" android:layout_width="wrap_content" android:layout_height="44.0dip" android:layout_marginTop="10.0dip" android:text="@string/Exit_Tutorials" android:drawableStart="@drawable/pop_icon_exit" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" />
            <TextView android:textSize="15.0dip" android:textColor="#ff666666" android:gravity="center" android:id="@id/btnRestart" android:layout_width="wrap_content" android:layout_height="44.0dip" android:layout_marginTop="10.0dip" android:text="@string/restart" android:drawableStart="@drawable/pop_icon_restart" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <View android:background="@drawable/tutorials_pop_top_star" android:layout_width="201.0dip" android:layout_height="54.0dip" android:layout_centerHorizontal="true" />
            <TextView android:textSize="22.0dip" android:textStyle="bold" android:textColor="#ff5062fb" android:gravity="center" android:id="@id/tvTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/finish_tutorial" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" />
        </RelativeLayout>
        <TextView android:textSize="15.0dip" android:textColor="#ff000000" android:gravity="center" android:id="@id/tvTips" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/finish_tutorial_tips" android:lineSpacingExtra="2.0sp" android:layout_marginStart="15.0dip" android:layout_marginEnd="15.0dip" />
        <TextView android:textSize="18.0dip" android:textColor="#ffffffff" android:gravity="center" android:id="@id/btnNextTutorial" android:background="@drawable/shape_pop_btn_blue" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginTop="20.0dip" android:text="@string/next_tutorial_name" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" />
        <TextView android:textSize="18.0sp" android:textColor="#ff4061fa" android:gravity="center" android:id="@id/btnUseSelfPic" android:background="@drawable/shape_pop_btn_transparent" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginTop="10.0dip" android:text="@string/use_self_pic" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" />
        <TextView android:textSize="18.0dip" android:textColor="#ffffffff" android:gravity="center" android:id="@id/btnBackHome" android:background="@drawable/shape_pop_btn_blue" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginTop="10.0dip" android:text="@string/Back_to_Homepage" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="14.0dip" android:textColor="#ff666666" android:gravity="center" android:id="@id/btnLeaveHere" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/Leave_Here_to_Explorer" android:layout_centerHorizontal="true" />
            <View android:background="#ff666666" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_below="@id/btnLeaveHere" android:layout_alignStart="@id/btnLeaveHere" android:layout_alignEnd="@id/btnLeaveHere" />
        </RelativeLayout>
        <View android:layout_width="fill_parent" android:layout_height="20.0dip" />
    </LinearLayout>
</RelativeLayout>